--- a/config.yml
+++ b/config.yml
@@ -18,11 +18,11 @@ params:
   env: production # to enable google analytics, opengraph, twitter-cards and schema.
   title: ExampleSite
   description: "ExampleSite description"
-  keywords: [Blog, Portfolio, PaperMod]
-  author: Me
+  keywords: [Blog, Portfolio, Math, Data, Science, AI, ML]
+  author: Àlex Pujol Vidal
   # author: ["Me", "You"] # multiple authors
   images: ["<link or path of image for opengraph, twitter-cards>"]
-  DateFormat: "January 2, 2006"
+  DateFormat: "January 2, 2023"
   defaultTheme: auto # dark, light
   disableThemeToggle: false
 
@@ -30,7 +30,7 @@ params:
   ShowShareButtons: true
   ShowPostNavLinks: true
   ShowBreadCrumbs: true
-  ShowCodeCopyButtons: false
+  ShowCodeCopyButtons: true
   ShowWordCount: true
   ShowRssButtonInSectionTermList: true
   UseHugoToc: true
@@ -59,8 +59,8 @@ params:
   # profile-mode
   profileMode:
     enabled: true # needs to be explicitly set
-    title: ExampleSite
-    subtitle: "This is subtitle"
+    title: "Àlex Pujol Vidal" 
+    subtitle: "Mathematics and Data Science"
     imageUrl: "<img location>"
     imageWidth: 120
     imageHeight: 120
