--- a/config.yml
+++ b/config.yml
@@ -19,7 +19,7 @@ params:
   title: ExampleSite
   description: "ExampleSite description"
   keywords: [Blog, Portfolio, Math, Data, Science, AI, ML]
-  author: Àlex Pujol Vidal
+  author: Àlex
   # author: ["Me", "You"] # multiple authors
   images: ["<link or path of image for opengraph, twitter-cards>"]
   DateFormat: "January 2, 2023"
