--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-baseURL: "https://examplesite.com/"
+baseURL: "https://alex-pv01.github.io/my-site/"
 title: ExampleSite
 paginate: 5
 theme: PaperMod
