--- a/config.yml
+++ b/config.yml
@@ -61,7 +61,7 @@ params:
     enabled: true # needs to be explicitly set
     title: "Àlex" 
     subtitle: "Mathematics and Data Science"
-    imageUrl: "<img location>"
+    imageUrl: "/assets/profile.jpeg"
     imageWidth: 120
     imageHeight: 120
     imageTitle: my image
