adding profile photo

--- a/config.yml
+++ b/config.yml
@@ -1,5 +1,4 @@
-#baseURL: "https://alex-pv01.github.io/my-site/"
-baseURL: "https://alex-pv01.github.io/"
+baseURL: "https://alex-pv01.github.io/my-site/"
 title: Àlex
 paginate: 5
 theme: PaperMod
@@ -62,10 +61,10 @@ params:
     enabled: true # needs to be explicitly set
     title: "Àlex" 
     subtitle: "Mathematics and Data Science"
-    imageUrl: "/profile1.jpeg"
+    imageUrl: "profile1.jpeg"
     imageWidth: 120
     imageHeight: 120
-    imageTitle: my image :D
+    imageTitle: my image :)
     buttons:
       - name: Posts
         url: posts
