--- a/config.yml
+++ b/config.yml
@@ -61,10 +61,10 @@ params:
     enabled: true # needs to be explicitly set
     title: "Àlex" 
     subtitle: "Mathematics and Data Science"
-    imageUrl: "profile1.jpeg"
+    imageUrl: "https://alex-pv01.github.io/my-site/profile1.jpeg"
     imageWidth: 120
     imageHeight: 120
-    imageTitle: my image :)
+    imageTitle: my image :D
     buttons:
       - name: Posts
         url: posts
