--- a/config.yml
+++ b/config.yml
@@ -64,7 +64,7 @@ params:
     imageUrl: "/public/profile1.jpeg"
     imageWidth: 120
     imageHeight: 120
-    imageTitle: my image :D
+    imageTitle: my image :)
     buttons:
       - name: Posts
         url: posts
