--- a/config.yml
+++ b/config.yml
@@ -28,7 +28,7 @@ params:
 
   ShowReadingTime: true
   ShowShareButtons: true
-  ShowPostNavLinks: false
+  ShowPostNavLinks: true
   ShowBreadCrumbs: false
   ShowCodeCopyButtons: true
   ShowWordCount: false
@@ -36,31 +36,33 @@ params:
   UseHugoToc: true
   disableSpecial1stPost: false
   disableScrollToTop: false
-  comments: false
+  comments: true
   hidemeta: false
   hideSummary: false
   showtoc: false
   tocopen: false
 
   assets:
-    # disableHLJS: true # to disable highlight.js
-    # disableFingerprinting: true
-    favicon: "<link / abs url>"
-    favicon16x16: "<link / abs url>"
-    favicon32x32: "<link / abs url>"
-    apple_touch_icon: "<link / abs url>"
-    safari_pinned_tab: "<link / abs url>"
+    disableHLJS: true # to disable highlight.js
+    disableFingerprinting: true
+    favicon: "/favicon.ico"
+    favicon16x16: "/favicon-16x16.png"
+    favicon32x32: "/favicon-32x32.png"
+    apple_touch_icon: "/apple-touch-icon.png"
+    safari_pinned_tab: "/safari-pinned-tab.svg"
+    android_chrome_192x192: "/android-chrome-192x192.png"
+    android_chrome_512x512: "/android-chrome-512x512.png"
 
   label:
-    text: "Home"
+    text: "Àlex"
     icon: /apple-touch-icon.png
     iconHeight: 35
 
   # profile-mode
   profileMode:
     enabled: true # needs to be explicitly set
-    title: "Àlex" 
-    subtitle: "Mathematics and Data Science"
+    title: "Àlex Pujol Vidal" 
+    subtitle: "Mathematics and AI"
     imageUrl: "profile1.jpeg"
     imageWidth: 256
     imageHeight: 256
@@ -116,28 +118,32 @@ params:
     keys: ["title", "permalink", "summary", "content"]
 menu:
   main:
-    # - identifier: archives
-    #   name: archives
-    #   url: /archives/
-    #   weight: 10
+    - identifier: about
+      name: about
+      url: /about/
+      weight: 1
+    - identifier: archives
+      name: archives
+      url: /archives/
+      weight: 10
     - identifier: search
       name: search
       url: /search/
       weight: 20
-    # - identifier: countop
-    #   name: countop.com
-    #   url: https://www.countop.com/
-    #   weight: 30
+    - identifier: countop
+      name: countop.com
+      url: https://www.countop.com/
+      weight: 30
 # Read: https://github.com/adityatelange/hugo-PaperMod/wiki/FAQs#using-hugos-syntax-highlighter-chroma
 pygmentsUseClasses: true
 markup:
   highlight:
-    noClasses: false
+    # noClasses: false
     # anchorLineNos: true
-    # codeFences: true
-    # guessSyntax: true
-    # lineNos: true
-    # style: monokai
+    codeFences: true
+    guessSyntax: true
+    lineNos: true
+    style: monokai
 
 outputs:
     home:
