--- a/config.yml
+++ b/config.yml
@@ -1,7 +1,7 @@
 baseURL: "https://alex-pv01.github.io/"
 title: Àlex
 paginate: 5
-theme: PaperMod
+theme: ["PaperMod"]
 
 enableRobotsTXT: true
 buildDrafts: false
